# NCTools

./: .git.tar  .gitignore  CMakeLists.txt  README.md  README_EN.md  main.cpp  mainwindow.cpp  mainwindow.h  serialmoreset.cpp
.mimocode/: .cron-lock
.mimocode/plans/: 1783396791932-shiny-falcon.md
cmake/: QtVersionCheck.cmake
release/: .gitignore  CHANGELOG.md  QUICKSTART.md  README.md
release/scripts/: build.sh  deploy_macos.sh  manage_icons.sh
src/: CMakeLists.txt
src/app/: AboutDialog.qml  AppIcon.icns  CMakeLists.txt  DataDisplay.qml  FileSendProgress.qml  HeaderBar.qml  Main.qml  MySSCOM_en_US.ts  MySSCOM_zh_CN.ts  MyToolBar.qml  NCTools_en_US.ts  NCTools_zh_CN.ts  QuickSendPanel.qml  SendPanel.qml  SerialConfigPanel.qml  SerialSettingsDialog.qml  StatusBar.qml  Style.qml  TcpClientConfigPanel.qml  TcpServerConfigPanel.qml  UdpConfigPanel.qml  main.cpp  mainwindow.ui  resources.qrc  serialmoreset.h  serialmoreset.ui
src/backend/: serialtransport.cpp  serialtransport.h  tcpclienttransport.cpp  tcpclienttransport.h  tcpservertransport.cpp  tcpservertransport.h  transportinterface.h  transportmanager.cpp  transportmanager.h  udptransport.cpp  udptransport.h
src/bridge/: CMakeLists.txt  appcontroller.cpp  appcontroller.h  quicksendmodel.cpp  quicksendmodel.h  transportcontroller.cpp  transportcontroller.h
src/core/: CMakeLists.txt
src/core/dataprocessor/: dataprocessor.cpp  dataprocessor.h
src/core/language/: languagemanager.cpp  languagemanager.h
src/core/settings/: settingsmanager.cpp  settingsmanager.h
src/core/transport/: abstracttransport.cpp  abstracttransport.h  serialtransport.cpp  serialtransport.h  tcpclienttransport.cpp  tcpclienttransport.h  tcpservertransport.cpp  tcpservertransport.h  transportconfig.h  transportfactory.cpp  transportfactory.h  transporttype.h  udptransport.cpp  udptransport.h
src/qml/: AboutDialog.qml  DataDisplay.qml  FileSendProgress.qml  HeaderBar.qml  Main.qml  QuickSendPanel.qml  SendPanel.qml  SerialConfigPanel.qml  SerialSettingsDialog.qml  StatusBar.qml  Style.qml  TcpClientConfigPanel.qml  TcpServerConfigPanel.qml  ToolBar.qml  UdpConfigPanel.qml
src/ui/qml/: main.qml
tests/: CMakeLists.txt  test_dataprocessor.cpp  test_settingsmanager.cpp  test_transportfactory.cpp
